--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,10 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Issue form parser'
+description: 'Parses issues created by Issue Forms to JSON format"
+author: 'onmax'
 inputs:
-  milliseconds: # change this
+  body:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'the body of the issue'
 runs:
   using: 'node16'
   main: 'dist/index.js'
