--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,22 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Issue form parser'
+description: 'Parses issues created by Issue Forms to JSON format'
+author: 'onmax'
+
+branding:
+  icon: 'clipboard'
+  color: 'blue'
+
 inputs:
-  milliseconds: # change this
+  issue_number:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'The issue number to parse'
+  github_token:
+    required: true
+    description: 'The GitHub token to use for authentication and fetching the issue. Defaults to the `GITHUB_TOKEN` secret.'
+    default: ${{ github.token }}
+outputs:
+  payload:
+    description: 'The contents of the issue in a JSON format'
 runs:
   using: 'node16'
   main: 'dist/index.js'
