--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "issue-form-parser",
-  "version": "1.1",
+  "version": "1.2",
   "description": "A GitHub Action that parses issues created by Issue Forms to JSON format",
   "main": "lib/main.js",
   "scripts": {
@@ -25,7 +25,8 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1"
+    "@actions/github": "^5.1.1",
+    "axios": "^1.2.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
