--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "A GitHub Action that parses issues created by Issue Forms to JSON format",
   "main": "lib/main.js",
   "scripts": {
-    "build": "npm run format:write && npm run package",
+    "build": "npm run package",
     "ci-test": "npx jest",
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
-    "format:write": "npx prettier --write .",
-    "format:check": "npx prettier --check .",
-    "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "tsc",
     "test": "npx jest",
-    "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
+    "all": "npm run lint && npm run test && npm run coverage && npm run package"
   },
   "repository": {
     "type": "git",
@@ -39,13 +36,6 @@
     "jest": "^29.1.2",
     "js-yaml": "^4.1.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^4.4.4",
-    "prettier": "^3.2.5",
-    "prettier-eslint": "^16.3.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-github": "^4.10.2",
-    "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-jsonc": "^2.15.1",
-    "eslint-plugin-prettier": "^5.1.3"
+    "typescript": "^4.4.4"
   }
 }
