--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
     "package": "tsc",
     "test": "npx jest",
-    "all": "npm run lint && npm run test && npm run coverage && npm run package"
+    "all": "npm run test && npm run coverage && npm run package"
   },
   "repository": {
     "type": "git",
