--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A GitHub Action that parses issues created by Issue Forms to JSON format",
   "main": "lib/main.js",
   "scripts": {
-    "build": "tsc",
-    "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run package && npm test"
+    "build": "npm run package",
+    "ci-test": "npx jest",
+    "package": "tsc",
+    "test": "npx jest",
+    "all": "npm run test && npm run package"
   },
   "repository": {
     "type": "git",
@@ -24,16 +25,16 @@
   "author": "onmax",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.10.1",
     "@actions/github": "^5.1.1",
     "axios": "^1.2.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
-    "@vercel/ncc": "^0.31.1",
-    "jest": "^27.2.5",
+    "@vercel/ncc": "^0.38.1",
+    "jest": "^29.1.2",
     "js-yaml": "^4.1.0",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.4.4"
   }
 }
