--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "issue-form-parser",
-  "version": "1.4",
+  "version": "20",
   "description": "A GitHub Action that parses issues created by Issue Forms to JSON format",
   "main": "lib/main.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "ci-test": "npx jest",
     "package": "tsc",
     "test": "npx jest",
-    "all": "npm run test && npm run package"
+    "all": "npm run test && npm run package",
+    "release": "npm run build && bumpp --commit --push --tag && npm publish"
   },
   "repository": {
     "type": "git",
@@ -25,16 +26,17 @@
   "author": "onmax",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/github": "^5.1.1",
-    "axios": "^1.2.5"
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
-    "@types/node": "^18.11.0",
-    "@vercel/ncc": "^0.38.1",
-    "jest": "^29.1.2",
+    "@types/node": "^18.19.71",
+    "@vercel/ncc": "^0.38.3",
+    "bumpp": "^9.10.1",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^4.4.4"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   }
 }
